# BluePrinter

./: .gitignore  CMakeLists.txt  Obstacle.filtergraph  Obstacle.jucer  README.md
Source/: KeyDetector.cpp  KeyDetector.h  PluginChain.cpp  PluginChain.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SnippetLibrary.cpp  SnippetLibrary.h  Vst3Library.cpp  Vst3Library.h  WebViewEditor.cpp  WebViewEditor.h
WebUI/: index.html  package-lock.json  package.json
WebUI/src/: App.jsx  bridge.js  styles.css  utils.js
WebUI/src/components/: LevelMeter.jsx  LibraryFolderRow.jsx  Notification.jsx  PluginChain.jsx  SnippetCard.jsx  SnippetList.jsx  Transport.jsx  Waveform.jsx  controls.jsx  icons.jsx
WebUI/src/eq/: EqPanel.jsx
WebUI/src/pedals/: Pedalboard.jsx
cmake/: create-shortcut.ps1  install-shortcut.cmake
